--- a/src/app/posts/ephemeral-environments.mdx
+++ b/src/app/posts/ephemeral-environments.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2025-12-30'
-title: 'Why We Switched to Ephemeral Previews'
+title: 'Switching to Ephemeral Preview Environments'
 tags: ['Testing', 'Infrastructure', 'En Punto']
 category: 'dev-diary'
 language: 'en'
