Fix error on logo visibility and text color hierarchy

--- a/src/app/posts/end-to-end-testing.mdx
+++ b/src/app/posts/end-to-end-testing.mdx
@@ -2,7 +2,7 @@
 date: '2025-11-03'
 title: 'Solving End-to-End Testing Issues at En Punto'
 tags: ['Testing', 'End-to-End Testing', 'En Punto']
-category: 'dev-diary'
+category: 'en-punto'
 language: 'en'
 ---
 
