--- a/src/app/es/posts/end-to-end-testing.mdx
+++ b/src/app/es/posts/end-to-end-testing.mdx
@@ -2,7 +2,7 @@
 date: '2025-12-30'
 title: 'Resolviendo problemas en pruebas end-to-end'
 tags: ['Testing', 'End-to-End Testing', 'En Punto']
-category: 'dev-diary'
+category: 'en-punto'
 language: 'es'
 ---
 
