--- a/src/app/posts/ephemeral-environments.mdx
+++ b/src/app/posts/ephemeral-environments.mdx
@@ -2,7 +2,7 @@
 date: '2025-12-30'
 title: 'Switching to Ephemeral Preview Environments'
 tags: ['Testing', 'Infrastructure', 'En Punto']
-category: 'dev-diary'
+category: 'en-punto'
 language: 'en'
 ---
 
