chore: Adjust title

--- a/src/app/posts/why-logistics-fails.mdx
+++ b/src/app/posts/why-logistics-fails.mdx
@@ -1,6 +1,6 @@
 ---
 date: '2026-01-21'
-title: "Why Logistics Fails (And It's Not Because People Can't Be Trusted)"
+title: "Why Logistics Fails"
 tags: ['Logistics', 'Trust']
 category: 'general'
 language: 'en'
